# homework_solutions

./: README.md
ansi_code/: test1.c  test2.c  test3.c  vertical_test.c
games4300/assign1/: Makefile  assignment1
games4300/assign1/src/: circle.cpp  config.cpp  config1.txt  helper.cpp  main.cpp  readConfigFile.cpp
games4300/assign2/: assign.txt  bullets.md  circle_collision.md  engine_architecture.md  engine_architecture.txt
games4300/assign2/config/: config.txt  configBullet.txt  configEnemy.txt  configFont.txt  configPlayer.txt
games4300/assign2/src/: Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityManagerTest.cpp  EntityManagerTest.h  EntityTest.cpp  EntityTest.h  Game.cpp  Game.h  GameTest.cpp  GameTest.h  Makefile  Vec2.cpp  Vec2.h  components.h  entity.cpp  entity.h  entity.hpp  entityManager.cpp  entityManager.h  entityManager.hpp  game.cpp  game.h  main.cpp  testEntity.cpp  testEntityManager.cpp  testEntityManger.cpp  testGameConfig.cpp  testUtility.cpp  testUtility.h  vec2.cpp  vec2.h  vec2.hpp
games4300/fall2023/assign1/: assign1.txt
games4300/fall2023/assign1/config/: config.txt
games4300/fall2023/assign1/dependencies/: CMakeLists.txt
games4300/fall2023/assign1/src/: circle.h  config.cpp  config.h  helper.h  main.cpp  rectangle.cpp  rectangle.h
games4300/fall2025/: CMakeLists.txt  README.md
games4300/fall2025/assign1/: CMakeLists.txt  assign1.txt
games4300/fall2025/assign1/a1demo/: CMakeLists.txt  demo.cpp
games4300/fall2025/assign1/a1solution/: CMakeLists.txt
games4300/fall2025/assign1/a1solution/include/: circle.h  gameConfig.h  rectangle.h
games4300/fall2025/assign1/a1solution/src/: findFile.cpp  gameConfig.cpp
games4300/fall2025/assign1/assets/config/: config.txt  noCircles.txt
games4300/fall2025/assign1/config/: config.txt  noRectangles.txt
games4300/fall2025/assign1/include/: circle.h  circle.hpp  config.h  game.h  game.hpp  gameConfig.h  gameConfig.hpp  rectangle.h  rectangle.hpp  shape.h
games4300/fall2025/assign1/src/: circle.cpp  config.cpp  demo.cpp  displayText.cpp  findDirAndFile.cpp  findFile.cpp  game.cpp  gameConfig.cpp  main.cpp  printWorkingDirectory.cpp  rectangle.cpp  shape.cpp
games4300/fall2025/assign2/: CMakeLists.txt  README.md  assign2.txt
games4300/fall2025/assign2/a2demo/: CMakeLists.txt
games4300/fall2025/assign2/a2demo/include/: Components.hpp  Game.h  Vec2.hpp
games4300/fall2025/assign2/a2demo/src/: Game.cpp
games4300/fall2025/assign2/a2solution/: CMakeLists.txt
games4300/fall2025/assign2/a2solution/assets/config/: config.txt
games4300/fall2025/assign2/a2solution/include/: Components.hpp  Entity.hpp  EntityManager.hpp  Vec2.hpp  fileUtility.h  game.h  gameConfig.h  logError.hpp  randomNumberGenerator.hpp  vec2.hpp
games4300/fall2025/assign2/a2solution/src/: fileUtility.cpp  game.cpp  gameConfig.cpp  main.cpp
games4300/fall2025/assign2/a2solution/test/: CMakeLists.txt  vecTest.cpp
games4300/fall2025/assign2/a2solution/test/include/: gameConfigTest.h  myAssert.h  randomNumberGenerator.hpp
games4300/fall2025/assign2/a2solution/test/src/: gameConfigTest.cpp  testGameConfig.cpp  vecTest.cpp
games4300/fall2025/assign2/a2test/: CMakeLists.txt
games4300/fall2025/assign2/a2test/assets/config/: configEnemy.txt  configFont.txt  configWindow.txt
games4300/fall2025/assign2/a2test/include/: Vec2Test.hpp  gameConfigTest.h  myAssert.h  randomNumberGenerator.hpp  vecTest.hpp
games4300/fall2025/assign2/a2test/src/: gameConfigTest.cpp  testGameConfig.cpp  testVec2.cpp  vecTest.cpp
games4300/fall2025/assign2/assets/config/: configBullet.txt  configPlayer.txt  configWindow.txt
games4300/fall2025/assign2/demo/: CMakeLists.txt
games4300/fall2025/assign2/demo/include/: Entity.hpp  EntityManager.hpp  Game.h  Vec2.hpp
games4300/fall2025/assign2/demo/src/: Game.cpp  main.cpp
games4300/fall2025/assign2/include/: EntityManager.hpp  Vec2.hpp
games4300/fall2025/assign3/: CMakeLists.txt  assets.txt  assign3.txt  level1.txt  level2.txt
games4300/fall2025/assign3/assets/: assets.txt  level1.txt
games4300/fall2025/assign3/include/: Action.hpp  Animation.hpp  Assets.h  Components.hpp  Entity.hpp  EntityManager.hpp  GameEngine.h  Physics.hpp  Replay.h  Scene.h  Scene_Menu.h  Scene_Play.h  Vec2.hpp
games4300/fall2025/assign3/lectureNotes/: Action.h  Action.hpp  Animation.h  Animation.hpp  Asset.h  Assets.cpp  Assets.h  Component.h  Components.hpp  Entity.h  EntityManager.h  GameEngine.h  Physics.h  Scene.h  Scene_Menu.cpp  Scene_Menu.h  Scene_Play.cpp  Scene_Play.h  classesList.txt
games4300/fall2025/assign3/resources/config/: assets.txt
games4300/fall2025/assign3/src/: Assets.cpp  GameEngine.cpp  Scene.cpp  Scene_Menu.cpp  Scene_Play.cpp  main.cpp
games4300/fall2025/dependencies/: CMakeLists.txt
isogram/: README.md  isogram.c  isogram.py
zumo_robot/imu/calibrate/: calibrate.cpp  calibrate.h  main.cpp
zumo_robot/imu/data/: calibrationData10.txt  calibrationData100.txt  calibrationData1000.txt  calibrationData250.txt  calibrationData500.txt  expectedValues.txt
